# flappyBird

./: ..gitignore.un~  .gitignore  CMakeLists.txt
flappyBird/: AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  State.hpp  StateMachine.cpp  StateMachine.hpp  flappyBird.cpp  flappyBird.h  main.cpp
